Name:          templatepg
Version:       0.2.6
Cabal-Version: >= 1.8
License:       BSD3
License-File:  COPYING
Copyright:     2010, 2011, 2012, 2013 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     alpha
Bug-Reports:   https://github.com/jekor/templatepg/issues
Homepage:      https://github.com/jekor/templatepg
Package-URL:   https://github.com/jekor/templatepg/archive/master.tar.gz
Category:      Database
Synopsis:      A PostgreSQL access library with compile-time SQL type inference
Description:   TemplatePG provides PostgreSQL access from Haskell via the
               PostgreSQL protocol. It also provides a higher-level Template
               Haskell interface. It eliminates a class of runtime errors by
               checking queries against a PostgreSQL database at compile-time.
               This also reduces boilerplate code for dealing with query
               results, as the type and number of result columns are known at
               compile-time.
Tested-With:   GHC == 7.6.3
Build-Type:    Simple

source-repository head
  type:     git
  location: git://github.com/jekor/templatepg.git

Flag md5
  Description: Enable md5 password authentication method
  Default: True

Library
  Build-Depends:
    base >= 4.6 && < 5,
    binary,
    bytestring >= 0.10.2,
    containers,
    haskell-src-meta,
    mtl,
    network,
    old-locale,
    parsec,
    regex-compat,
    regex-posix,
    template-haskell,
    time,
    utf8-string
  Exposed-Modules:
    Database.TemplatePG
    Database.TemplatePG.Connection
    Database.TemplatePG.Protocol
    Database.TemplatePG.Query
    Database.TemplatePG.SQL
    Database.TemplatePG.Types
  Extensions: TemplateHaskell
  GHC-Options: -Wall -fno-warn-type-defaults
  if flag(md5)
    Build-Depends: cryptohash >= 0.5
    CPP-options: -DUSE_MD5

test-suite test
  build-depends: base, network, time, templatepg
  type: exitcode-stdio-1.0
  main-is: Main.hs
  buildable: True
  hs-source-dirs: test
  Extensions: TemplateHaskell
